# abbcari-LCCA-ammonia

./: .gitignore  README.md
.github/workflows/: main.yml
Calculations/: import_export.py
Calculations/Capital-Calc/: calculations.py  import_export.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/backend/: app.py  mongo.py  urls.py
backend/backend/Schemas/: calculation.py  costs.py  login.py  process.py  subprocess.py
backend/backend/api/: users.py
backend/calculations/: capex.py  emmisions.py  general.py  import_export.py  lcca.py  main.py  opex.py
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/.storybook/: preview.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  api.ts  index.css  index.tsx  store.ts
frontend/src/Slices/: conventionalSlice.ts  electrifiedSlice.ts  generalSlice.ts  nameSlice.ts
frontend/src/components/AboutPage/: MeetTheTeam.tsx
frontend/src/components/AnalysisForm/: FirstTechnology.tsx  General.tsx  Review.tsx  SecondTechnology.tsx
frontend/src/components/Button/: Button.stories.tsx  Button.tsx
frontend/src/components/Charts/: CostChart.tsx  EmmissionsChart.tsx  LCCALineChart.tsx
frontend/src/components/DeleteCostModal/: DeleteCostModal.tsx
frontend/src/components/DeleteProcessModal/: DeleteProcessModal.tsx
frontend/src/design/Card/: Card.tsx  (+1 more)
frontend/src/screens/: About.tsx  Analysis.tsx  FirstTechnology.tsx  General.tsx  Home.tsx  Results.tsx  Review.tsx  StartNew.tsx  ViewOrCreate.tsx
frontend/src/utils/: utils.ts
(+38 files in other folders)
