[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cmhrabi <calum.hrabi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
marshmallow = "^3.26.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
